--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <footer>
     <span>Created by Leonardo Meza with Gemini API </span>
   </footer>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
